# cmake-starter

./: CMakeLists.txt  Dockerfile  README.md
.cache/clangd/index/: main.cpp.3F39C920151DEEA4.idx  version.hpp.D6B49ED91DF29887.idx
.github/workflows/: cmake.yml
cmake/: utils.cmake
include/starter/: version.hpp
src/: main.cpp
test/: constexpr_tests.cpp  starter_tests.cpp
tests/: CMakeLists.txt
